html whitespace fix 2

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -32,11 +32,11 @@ $pale-spring-bud: #E2E3A6;
 
 }
 
-html,
-body{
-    overscroll-behavior: auto;
-    background: $deep-taupe;
-}
+// html,
+// body{
+//     overscroll-behavior: auto;
+//     background: $deep-taupe;
+// }
 
 .home{
     background-color: $rich-black !important;
